<resources>
    <string name="app_name">SaveMyDevice</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_home">Accueil</string>
    <string name="action_settings">Paramètres</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email">Adresse email</string>
    <string name="phone">Numéro de téléphone</string>
    <string name="name">Prénom et Nom</string>

    <string name="action_sign_in_short">S\'enregistrer</string>
    <string name="minimum_password">Mot de pas trop court, entrez un minimum de 6 caracteres!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Se connecter</string>
    <string name="btn_link_to_register">Créer un compte</string>
    <string name="btn_link_to_login">Déjà un compte? Connectez vous!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Mot de passe oublié?</string>
    <string name="btn_reset_password">Restaurer le mot de passe</string>
    <string name="btn_cancel_reset_password">Annuler</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="hint_pseudo">Pseudo</string>
    <string name="hint_nom_prenom">Nom et prénom</string>
    <string name="hint_adresse">Votre adresse</string>
    <string name="hint_codePostal"> Code postal</string>
    <string name="hint_ville"> Ville</string>
    <string name="hint_age"> Age</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">mot de passe oublié ?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

</resources>
