<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">


        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_margin="5dp"
            android:id="@+id/textView2"
            tools:text="Créer un compte"
            android:textSize="25sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            >

            <EditText
                android:id="@+id/pseudo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pseudo"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/rounded_edittext"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="1dp"
            >

            <EditText
                android:id="@+id/nom_prenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nom_prenom"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/rounded_edittext"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="1dp"
            >

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_age"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/rounded_edittext"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="1dp"
            >

            <EditText
                android:id="@+id/adresse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_adresse"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/rounded_edittext"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="1dp"
            >

            <EditText
                android:id="@+id/code_postal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_codePostal"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/rounded_edittext"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            >

            <EditText
                android:id="@+id/ville"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ville"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/rounded_edittext"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="1dp"
            >

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/rounded_edittext"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="1dp"
            >

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:textColorHint="@color/colorPrimary"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/rounded_edittext"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center">
            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_button"
                android:text="@string/action_sign_in_short"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp">
            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:background="@null"
                android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp" />
        </RelativeLayout>

    </LinearLayout>
</FrameLayout>