<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">


        <TextView
            android:text="Modifiez votre profil"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_margin="5dp"
            android:id="@+id/textView2" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="1dp"
            >

            <EditText
                android:id="@+id/pseudoUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pseudo"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/rounded_edittext"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="1dp"
            >

            <EditText
                android:id="@+id/nom_prenomUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nom_prenom"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/rounded_edittext"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="1dp"
            >

            <EditText
                android:id="@+id/ageUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_age"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/rounded_edittext"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="1dp"
            >

            <EditText
                android:id="@+id/adresseUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_adresse"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/rounded_edittext"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="1dp"
            >

            <EditText
                android:id="@+id/code_postalUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_codePostal"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/rounded_edittext"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="1dp"
            >

            <EditText
                android:id="@+id/villeUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ville"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/rounded_edittext"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="42dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Valider"
                android:textColor="#FFFFFF"
                android:id="@+id/button_valide_update"
                android:background="@drawable/rounded_button"
                android:textAllCaps="false"
                android:textSize="20dp"/>
            <Button
                android:id="@+id/btn_cancel_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="Annuler"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/button_valide_update"
                android:textSize="20dp"/>
        </RelativeLayout>

    </LinearLayout>
</FrameLayout>